syntax = "proto3";
option java_multiple_files = true;
package com.gumi.grpc.example.hello.model;

message HelloRequest {
  string name = 1;
  string city = 2;
}

message HelloResponse {
  string greeting = 1;
}